Fix button clipping on sml phones
lowered the fonts and margins for smaller mobile devices solved this issue.

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -451,6 +451,12 @@ li {
           font-weight: bold;
           align-self: flex-end;
           justify-content: center;
+
+          @include tinyMobile {
+            font-size: 1rem;
+            width: 10rem;
+            margin: 0 .5rem 1rem .5rem;
+          }
         }
       } 
     }
